--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,19 @@
 language: php
 
 php:
-  - 5.6
-  - 5.5
+  - 7.2
+  - 7.4
 #  - hhvm
 
 services:
   - redis-server
+  - mysql
 
 addons:
   apt:
     packages:
       - nginx
-      - realpath
+      - coreutils
       - lftp
 
 git:
@@ -30,7 +31,7 @@ env:
     # (PIWIK_TEST_TARGET=maximum_supported_piwik).
     # You can also specify a specific Matomo version
     # (PIWIK_TEST_TARGET=2.16.0-b1).
-    - PIWIK_TEST_TARGET=maximum_supported_piwik
+    - PIWIK_TEST_TARGET=4.x-dev
   matrix:
     - TEST_SUITE=PluginTests MYSQL_ADAPTER=PDO_MYSQL TEST_AGAINST_PIWIK_BRANCH=$PIWIK_TEST_TARGET
     - TEST_SUITE=PluginTests MYSQL_ADAPTER=PDO_MYSQL TEST_AGAINST_CORE=minimum_required_piwik
@@ -38,10 +39,10 @@ env:
 matrix:
   exclude:
     # execute latest stable tests only w/ PHP 5.5
-    - php: 5.5
+    - php: 7.2
       env: TEST_SUITE=PluginTests MYSQL_ADAPTER=PDO_MYSQL TEST_AGAINST_CORE=minimum_required_piwik
 
-dist: trusty
+dist: bionic
 
 sudo: false
 
@@ -65,7 +66,7 @@ install:
   - '[ -d ./tests/travis/.git ] || sh -c "rm -rf ./tests/travis && git clone https://github.com/matomo-org/travis-scripts.git ./tests/travis"'
   - cd ./tests/travis ; git checkout master ; cd ../..
 
-  - export GENERATE_TRAVIS_YML_COMMAND="php ./tests/travis/generator/main.php generate:travis-yml --plugin=\"DeviceFeatureWebGL\" --dist-trusty --sudo-false --verbose"
+  - export GENERATE_TRAVIS_YML_COMMAND="php ./tests/travis/generator/main.php generate:travis-yml --plugin=\"DeviceFeatureWebGL\" --php-versions=\"7.2,7.4\" --distribution=\"bionic\" --sudo-false --verbose"
   - '[[ "$TRAVIS_JOB_NUMBER" != *.1 || "$TRAVIS_PULL_REQUEST" != "false" ]] || ./tests/travis/autoupdate_travis_yml.sh'
 
   - ./tests/travis/checkout_test_against_branch.sh
